# terrain3

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
nmutil/: CMakeLists.txt  camera.h  config.h  defs.h  gl.cpp  gl.h  intersect.h  io.h  log.h  math.h  matrix.h  util.h  vector.h
res/shader/: axis.frag  axis.vert  lod.comp  lod.frag  lod.vert  lod_debug.frag  lod_debug.vert  lod_norm.frag  lod_norm.geom  lod_water.frag  lod_water.vert
src/: app.cpp  app.h  axis.cpp  axis.h  comm.h  geometry.cpp  geometry.h  gui.cpp  gui.h  heightmap.cpp  heightmap.h  log.cpp  main.cpp  mesh.cpp  mesh.h  noise.h  stb_wrapper.cpp  stb_wrapper.h  terrain.cpp  terrain.h  terrain_defs.h  timer.h  win.cpp  win.h  window.cpp  window.hpp
